--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
         "log": "^6.0.0",
         "merge-files": "^0.1.2",
         "mini-css-extract-plugin": "^0.4.3",
+        "ncp": "^2.0.0",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.19.1",
         "prop-types": "^15.7.2",
